--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,11 +33,12 @@ book:
 
     - part: "In-class Activities"
       chapters: 
+      - ica/quarto-demo.qmd
       - ica/ica-uni.qmd
       - ica/ica-bi.qmd
       - ica/ica-multi.qmd
       - ica/ica-spatial.qmd
-      - ica/quarto-demo.qmd
+      - ica/ica-wrangling.qmd
 
 format:
   html:
