--- a/_quarto.yml
+++ b/_quarto.yml
@@ -43,6 +43,7 @@ book:
       chapters: 
       - ica/ica-wrangling.qmd
       - ica/ica-dates.qmd
+      - ica/ica-reshaping.qmd
 
 format:
   html:
