--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,6 +44,9 @@ book:
       - ica/ica-wrangling.qmd
       - ica/ica-dates.qmd
       - ica/ica-reshaping.qmd
+      - ica/ica-joining.qmd
+      - ica/ica-factors.qmd
+      - ica/ica-strings.qmd
 
 format:
   html:
