created viz from exam1
and created summary sheet

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,9 @@ book:
       - bw/bw-tri.qmd
       - bw/bw-quad.qmd
       - bw/bw-spatial.qmd
+      - bw/bw-exam1.qmd
+      - bw/Summary.qmd
+    
 
     - part: "In-class Activities: Viz"
       chapters: 
